qr scanner revamp v2

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -131,6 +131,7 @@
   "components.send.assetselectorscreen.youHave": "You have",
   "components.send.assetselectorscreen.noAssetsAddedYet": "No {fungible} added yet",
   "components.send.addressreaderqr.title": "Scan QR code address",
+  "components.send.addressreaderqr.text": "Scan recipients QR code to add a crypto address",
   "components.send.amountfield.label": "Amount",
   "components.send.editamountscreen.title": "Asset amount",
   "components.send.memofield.label": "Memo",
