add basic structure, navigation and swap input

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -102,6 +102,19 @@
   "nft.gallery.reloadApp": "Try to restart the app.",
   "nft.navigation.title": "NFT Gallery",
   "nft.navigation.search": "Search NFT",
+  "swap.swapScreen.swapTitle": "Swap",
+  "swap.swapScreen.tokenSwapTab": "Token swap",
+  "swap.swapScreen.ordersSwapTab": "Orders",
+  "swap.swapScreen.marketButton": "Market",
+  "swap.swapScreen.limitButton": "Limit",
+  "swap.swapScreen.swapFrom": "Swap from",
+  "swap.swapScreen.swapTo": "Swap to",
+  "swap.swapScreen.currentBalance": "Current balance",
+  "swap.swapScreen.clear": "CLEAR",
+  "swap.swapScreen.selectToken": "Select token",
+  "swap.swapScreen.marketPrice": "Market price",
+  "swap.swapScreen.slippageTolerance": "Slippage tolerance",
+  "swap.swapScreen.swapButton": "SWAP",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
   "components.receive.addressmodal.copiedLabel": "Copied",
